# Rust-CRUD

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  init.sql
benchmarks/: users.js
src/: main.rs
src/cache/: mod.rs  redis.rs
src/config/: mod.rs  settings.rs  state.rs
src/db/: connection.rs  mod.rs  repository.rs
src/errors/: error.rs
src/handlers/: auth.rs  metrics.rs  mod.rs  user.rs
src/middlewares/: auth.rs  mod.rs  rate_limit.rs  tracing.rs
src/models/: auth.rs  mod.rs  response.rs  user.rs
src/services/: auth.rs  mod.rs  user.rs
src/utils/: metrics.rs  mod.rs  pagination.rs
