[package]
name = "rust-crud-api"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "rust-crud-api"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "macros"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.111"
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
hyper = { version = "1.3.1", features = ["full"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
thiserror = "1.0.58"
anyhow = "1.0.80"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
redis = { version = "0.25.3", features = ["connection-manager", "tokio-comp", "rustls"] }
prometheus = "0.13.3"
config = "0.14.0"
async-trait = "0.1.77"
once_cell = "1.19.0"
rand = "0.8.5"
base64 = "0.22.0"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
tokio-test = "0.4.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = true

[profile.bench]
inherits = "release"